added logo to blog

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -46,7 +46,7 @@
       <div class="panel-main__inner panel-inverted">
       <div class="panel-main__content">
   
-          <a href="index.html#open" title="link to homepage for Ujirani"><%= image_tag '/assets/ujirani_logo.png', width: "80", alt: "Ujirani logo", class: "panel-cover__logo logo" %></a>
+          <a href="index.html#open" title="link to homepage for Ujirani"><%= image_tag '/assets/blog/ujirani_logo.png', width: "80", alt: "Ujirani logo", class: "panel-cover__logo logo" %></a>
           <h1 class="panel-cover__title panel-title"><a href="index.html" title="link to homepage for Let&#x27;s Ongair">Let's Ongair</a></h1>
           <hr class="panel-cover__divider" />
           <p class="panel-cover__description">Insights for Instant messaging.</p>
