--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <title>Let&#x27;s Ongair</title>
+  <title>Ujirani</title>
 
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
@@ -15,11 +15,11 @@
   <meta name="description" content="Insights for Instant messaging.">
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Let&#x27;s Ongair">
+  <meta name="twitter:title" content="Ujirani">
   <meta name="twitter:description" content="Insights for Instant messaging.">
 
   <meta property="og:type" content="article">
-  <meta property="og:title" content="Let&#x27;s Ongair">
+  <meta property="og:title" content="Ujirani">
   <meta property="og:description" content="Insights for Instant messaging.">
 
 
@@ -47,9 +47,9 @@
       <div class="panel-main__content">
   
           <a href="index.html#open" title="link to homepage for Ujirani"><%= image_tag '/assets/blog/ujirani_logo.png', width: "80", alt: "Ujirani logo", class: "panel-cover__logo logo" %></a>
-          <h1 class="panel-cover__title panel-title"><a href="index.html" title="link to homepage for Let&#x27;s Ongair">Let's Ongair</a></h1>
+          <h1 class="panel-cover__title panel-title"><a href="index.html" title="link to homepage for Ujirani">Ujirani</a></h1>
           <hr class="panel-cover__divider" />
-          <p class="panel-cover__description">Insights for Instant messaging.</p>
+          <p class="panel-cover__description">Great software for great neighborliness.</p>
   
           <hr class="panel-cover__divider panel-cover__divider--secondary" />
   
@@ -57,14 +57,14 @@
   
             <form id="search">
               <i class="icon icon-search"></i>
-              <input type="text", name="search", placeholder="WhatsApp, Wechat..." id="search-field" />
+              <input type="text", name="query", placeholder="Nyumba Kumi, Ujirani" id="search-field" />
               <hr class="panel-cover__divider panel-cover__divider--secondary" />
             </form>
   
             <nav class="cover-navigation cover-navigation--primary">
               <ul class="navigation">
-                <li class="navigation__item"><a href="http://app.ongair.im/" target="_blank" title="Sign up today" class="blog-button">Sign up Today</a></li>
-                <li class="navigation__item"><a href="index.html#open" title="Let's Ongair" class="blog-button">Blog</a></li>
+                <li class="navigation__item"><a href="http://ujiraniapp.com/" target="_blank" title="Sign up today" class="blog-button">Sign up Today</a></li>
+                <li class="navigation__item"><a href="index.html#open" title="Ujirani" class="blog-button">Blog</a></li>
               </ul>
             </nav>
   
@@ -74,7 +74,7 @@
             
               <!-- Twitter -->
               <li class="navigation__item ">
-                <a target="blank" href="http://twitter.com/ongair_" title="Follow us on Twitter">
+                <a target="blank" href="http://twitter.com/ujiranitech" title="Follow us on Twitter">
                   <i class='icon icon-social-twitter'></i>
                   <span class="label">Twitter</span>
                 </a>
@@ -82,29 +82,29 @@
             
               <!-- Linkedin -->
               <li class="navigation__item ">
-                <a target="blank" href="https://www.linkedin.com/company/ongair" title="Lets Connect">
+                <a target="blank" href="https://www.linkedin.com/company/ujirani" title="Lets Connect">
                   <i class='icon icon-social-linkedin'></i>
                   <span class="label">Linkedin</span>
                 </a>
               </li>
             
                <!-- Facebook -->
-              <li class="navigation__item ">
-                <a target="blank" href="https://www.facebook.com/letsOngair" title="Like us on Facebook">
+              <!-- <li class="navigation__item ">
+                <a target="blank" href="https://www.facebook.com/Ujirani" title="Like us on Facebook">
                   <i class='icon icon-social-facebook'></i>
                   <span class="label">Facebook</span>
                 </a>
-              </li>
+              </li> -->
             
               <!-- Github -->
             
               <!-- Email -->
-              <li class="navigation__item ">
-                <a target="blank" href="mailto:hello@ongair.im" title="Get in touch">
+              <!-- <li class="navigation__item ">
+                <a target="blank" href="mailto:hello@ujiraniapp.com" title="Get in touch">
                   <i class='icon icon-mail'></i>
                   <span class="label">Email</span>
                 </a>
-              </li>
+              </li> -->
             
               <!-- RSS -->
             
@@ -121,110 +121,10 @@
 
   <div class="content-wrapper">
     <div id="results"></div>
-    <div class="content-wrapper__inner">
-      <div class="main-post-list">
-  <ol class="post-list">
-    <li>
-      <h2 class="post-list__post-title post-title">
-        <a href="the-fun-thing-about-hard-things/index.html" title="link to The fun thing about hard things">The fun thing about hard things</a>
-      </h2>
-      <img class="post-list__post-image" src="content/images/2015/02/ben_horowitz_hand_signed_copy_of_the_hard_thing_about_hard_things_ifonly_714x470_1.png" alt="">
-      <p class="excerpt">Building a company - a tech startup specifically - is one of those hard things Ben Horowitz expounds in detail in his great book 'The hard thing about hard things'. But this challenge can also be very satisfying, especially when you find a solution to a hard problem. Well, today&hellip;</p>
-      <div class="post-list__meta">
-        <time datetime="19 Feb 2015" class="post-list__meta--date date">19 Feb 2015
-        </time>
-        <span class="post-list__meta--tags tags">
-          on <a href="tag/techcorner/index.html">techcorner</a>
-        </span>
-      </div>
-      <hr class="post-list__divider" />
-    </li>
-    <li>
-      <h2 class="post-list__post-title post-title">
-        <a href="location-location-location/index.html" title="link to Location! Location! Location!">Location! Location! Location!</a>
-      </h2>
-      <img class="post-list__post-image" src="content/images/2015/02/locations-1-1.png" alt="">
-      <p class="excerpt">'Location! Location! Location! goes the old real estate mantra - The short way of saying that value of land is greatly determined by the quality of its location and its surrounding areas. In a similar way, the value of a lead in terms of Marketing &amp; Sales is greatly determined&hellip;</p>
-      <div class="post-list__meta">
-        <time datetime="03 Jun 2014" class="post-list__meta--date date">03 Jun 2014
-        </time>
-        <span class="post-list__meta--tags tags">
-          on <a href="tag/features/index.html">Features</a>
-        </span>
-      </div>
-      <hr class="post-list__divider" />
-    </li>
-    <li>
-      <h2 class="post-list__post-title post-title">
-        <a href="easily-manage-your-whatsapp-group-chat/index.html" title="link to Easily Manage your WhatsApp Group Chat">Easily Manage your WhatsApp Group Chat</a>
-      </h2>
-      <p class="excerpt">Chase Bank Kenya was the first bank to use WhatsApp for customer service. They recently upped their interaction on this platform by inviting people in financials groups to add their bank to their group for the purposes of getting investment advice. Source There are an estimated 300,000 investment groups&hellip;</p>
-      <div class="post-list__meta">
-        <time datetime="03 Jun 2014" class="post-list__meta--date date">03 Jun 2014
-        </time>
-        <span class="post-list__meta--tags tags">
-          on <a href="tag/examples/index.html">Examples</a>, <a href="tag/groups/index.html">Groups</a>
-        </span>
-      </div>
-      <hr class="post-list__divider" />
-    </li>
-    <li>
-      <h2 class="post-list__post-title post-title">
-        <a href="hourly-message-summary-on-ongair/index.html" title="link to Receive your WhatsApp messages via Email">Receive your WhatsApp messages via Email</a>
-      </h2>
-      <img class="post-list__post-image" src="content/images/2015/02/message_digest-1.png" alt="">
-      <p class="excerpt">WhatsApp users on average receive about 2.2K messages per month. Sounds manageable for an individual. But what happens when you're a company doing customer care on WhatsApp, or running a marketing campaign or perhaps you're a socialite...   We received over 1000 messages from about 90 contacts last weekend. Is&hellip;</p>
-      <div class="post-list__meta">
-        <time datetime="21 May 2014" class="post-list__meta--date date">21 May 2014
-        </time>
-        <span class="post-list__meta--tags tags">
-          on <a href="tag/features/index.html">Features</a>, <a href="tag/productivity/index.html">Productivity</a>
-        </span>
-      </div>
-      <hr class="post-list__divider" />
-    </li>
-    <li>
-      <h2 class="post-list__post-title post-title">
-        <a href="whatsapp-accounts-23-of-econet-zimbabwes-network-usage/index.html" title="link to WhatsApp accounts 23% of Econet Zimbabwe’s network usage">WhatsApp accounts 23% of Econet Zimbabwe’s network usage</a>
-      </h2>
-      <img class="post-list__post-image" src="content/images/2015/02/2014_02_21_Usage.jpg" alt="">
-      <p class="excerpt">Almost a quarter of all network usage on Econet Zimbabwe’s mobile network is attributed to instant messaging service WhatsApp Source This was after Econet introduced unlimited WhatsApp bundles. Econet is Zimbabwe's largest mobile network with about 8.8 million subscribers.  Its safe to assume that the users in Zimbabwe&hellip;</p>
-      <div class="post-list__meta">
-        <time datetime="21 May 2014" class="post-list__meta--date date">21 May 2014
-        </time>
-        <span class="post-list__meta--tags tags">
-          on <a href="tag/stats/index.html">Stats</a>
-        </span>
-      </div>
-      <hr class="post-list__divider" />
-    </li>
-    <li>
-      <h2 class="post-list__post-title post-title">
-        <a href="indian-street-food-vendor-taking-orders-via-whatsapp/index.html" title="link to Indian Street Food vendor taking orders via WhatsApp">Indian Street Food vendor taking orders via WhatsApp</a>
-      </h2>
-      <p class="excerpt">WhatsApp was being touted as the New Facebook of India as early as September 2013 and who can disagree when even small roadside food vendors use it to take orders. (Source: http://www.socialsamosa.com/2013/09/whatsapp-new-facebook-india/)&hellip;</p>
-      <div class="post-list__meta">
-        <time datetime="13 May 2014" class="post-list__meta--date date">13 May 2014
-        </time>
-        <span class="post-list__meta--tags tags">
-          on <a href="tag/examples/index.html">Examples</a>
-        </span>
-      </div>
-      <hr class="post-list__divider" />
-    </li>
-  </ol>
-  <hr class="post-list__divider " />
-<nav class="pagination" role="navigation">
-  <span class="pagination__page-number">Page 1 of 2</span>
-  <a class="older-posts pagination__older btn btn-small" href="page/2/index.html#open">Older Posts &rarr;</a>
-</nav>
-
-</div>
-
-      <footer class="footer">
-        <span class="footer__copyright">&copy; 2015. All rights reserved.</span>
-      </footer>
-    </div>
+    <%= yield %>
+    <footer class="footer">
+      <span class="footer__copyright">&copy; 2015. All rights reserved.</span>
+    </footer>
   </div>
 
   <script type="text/javascript">
