escape HTML when displaying article content

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,7 +8,7 @@
       </h2>
       <%= image_tag article.image, class: "post-list__post-image" %>
       <p class="excerpt">
-        <%= article.summary %>
+        <%= raw article.summary %>
         &hellip;
       </p>
       <div class="post-list__meta">
