--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -73,20 +73,20 @@
               <ul class="navigation">
             
               <!-- Twitter -->
-              <li class="navigation__item ">
+              <!-- <li class="navigation__item ">
                 <a target="blank" href="http://twitter.com/ujiranitech" title="Follow us on Twitter">
                   <i class='icon icon-social-twitter'></i>
                   <span class="label">Twitter</span>
                 </a>
-              </li>
+              </li> -->
             
               <!-- Linkedin -->
-              <li class="navigation__item ">
+              <!-- <li class="navigation__item ">
                 <a target="blank" href="https://www.linkedin.com/company/ujirani" title="Lets Connect">
                   <i class='icon icon-social-linkedin'></i>
                   <span class="label">Linkedin</span>
                 </a>
-              </li>
+              </li> -->
             
                <!-- Facebook -->
               <!-- <li class="navigation__item ">
