--- a/app/views/dashboard/_left_side_menu.html.erb
+++ b/app/views/dashboard/_left_side_menu.html.erb
@@ -6,7 +6,7 @@
             <%= image_tag current_user.photo.url, class: "img-circle" %>
           </div>
           <div class="info">
-            <p>Hello, <%= current_user.name.split(" ")[0] %></p>
+            <p>Hello, <%= current_user.name %></p>
             <small style="color: #eee;">Welcome Back</small>
           </div>
         </div>
