--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -57,7 +57,7 @@
           <div class="navigation-wrapper">
   
             <form id="search">
-              <i class="icon icon-search"></i>
+              <i class="icon-search fa fa-search"></i>
               <input type="text", name="query", placeholder="Nyumba Kumi, Ujirani" id="search-field" />
               <hr class="panel-cover__divider panel-cover__divider--secondary" />
             </form>
