--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <title>Ujirani</title>
+  <title>Ujirani | Blog</title>
 
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
@@ -12,22 +12,18 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <meta name="description" content="Insights for Instant messaging.">
+  <meta name="description" content="Digitizing the NyumbaKumi initiative">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Ujirani">
-  <meta name="twitter:description" content="Insights for Instant messaging.">
+  <meta name="twitter:description" content="Digitizing the NyumbaKumi initiative">
 
   <meta property="og:type" content="article">
   <meta property="og:title" content="Ujirani">
-  <meta property="og:description" content="Insights for Instant messaging.">
+  <meta property="og:description" content="Digitizing the NyumbaKumi initiative">
 
 
-  <link rel="shortcut icon" href="assets/img/favicon.ico">
-  <meta name="msapplication-TileColor" content="#2b5797">
-  <meta name="msapplication-TileImage" content="/assets/img/mstile-144x144.png">
-  <meta name="msapplication-config" content="/assets/img/browserconfig.xml">
-  <meta name="theme-color" content="#ffffff">
+  <!-- <link rel="shortcut icon" href="assets/img/favicon.ico"> -->
 
   <%= stylesheet_link_tag 'blog', media: 'all', 'data-turbolinks-track' => false %>
   <%= javascript_include_tag 'blog', 'data-turbolinks-track' => false %>
@@ -64,7 +60,7 @@
   
             <nav class="cover-navigation cover-navigation--primary">
               <ul class="navigation">
-                <li class="navigation__item"><a href="http://ujiraniapp.com/" target="_blank" title="Sign up today" class="blog-button">Sign up Today</a></li>
+                <li class="navigation__item"><a href="http://ujiraniapp.com/" target="_blank" title="Sign up today" class="blog-button">Join Today</a></li>
                 <li class="navigation__item"><a href="<%= blog_path %>" title="Ujirani" class="blog-button">Blog</a></li>
               </ul>
             </nav>
@@ -134,13 +130,14 @@
     });
   </script>
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    // })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
   
-    ga('create', 'UA-59878696-1', 'auto');
-    ga('send', 'pageview');
+    // ga('create', 'UA-59878696-1', 'auto');
+    // ga('send', 'pageview');
   
-  </script></body>
+  </script>
+  </body>
 </html>
