--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,35 +1,29 @@
 <div class="content-wrapper__inner">
-      <div class="main-post-list">
-  <ol class="post-list">
-    <% @articles.each do |article| %>
-    <li>
-      <h2 class="post-list__post-title post-title">
-        <%= link_to article.title, article_path(article), title: article.title %>
-      </h2>
-      <%= image_tag article.image, class: "post-list__post-image" %>
-      <p class="excerpt">
-        <%= raw article.summary %>
-        &hellip;
-      </p>
-      <div class="post-list__meta">
-        <time datetime="19 Feb 2015" class="post-list__meta--date date">
-          <%= time_formatter(article.created_at) %>
-        </time>
-        <span class="post-list__meta--tags tags">
-          on <%= link_to article.category.name, "#{articles_path}?category=#{article.category.name}" %>
-        </span>
-      </div>
-      <hr class="post-list__divider" />
-    </li>
-    <% end %>
-  </ol>
-  <hr class="post-list__divider " />
-<nav class="pagination" role="navigation">
-  <span class="pagination__page-number">Page 1 of 2</span>
-  <a class="older-posts pagination__older btn btn-small" href="page/2/index.html#open">Older Posts &rarr;</a>
-</nav>
-
+  <div class="main-post-list">
+    <ol class="post-list">
+      <% @articles.each do |article| %>
+      <li>
+        <h2 class="post-list__post-title post-title">
+          <%= link_to article.title, article_path(article), title: article.title %>
+        </h2>
+        <%= image_tag article.image, class: "post-list__post-image" %>
+        <p class="excerpt">
+          <%= raw article.summary %>
+          &hellip;
+        </p>
+        <div class="post-list__meta">
+          <time datetime="19 Feb 2015" class="post-list__meta--date date">
+            <%= time_formatter(article.created_at) %>
+          </time>
+          <span class="post-list__meta--tags tags">
+            on <%= link_to article.category.name, "#{articles_path}?category=#{article.category.name}" %>
+          </span>
+        </div>
+        <hr class="post-list__divider" />
+      </li>
+      <% end %>
+    </ol>
+    <hr class="post-list__divider " />
+    <%= will_paginate @articles %>
+  </div>
 </div>
-
-      
-    </div>
