--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -33,7 +33,7 @@
 <body class="home-template no-js">
 
   <span class="mobile btn-mobile-menu">
-    <i class="icon icon-list btn-mobile-menu__icon"></i>
+    <i class="fa fa-bars barsicon"></i>
     <i class="icon icon-x-circle btn-mobile-close__icon hidden"></i>
   </span>
 
