changes to the index file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,30 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Ujirani App" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Ujirani App" %>">
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => false %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
-    <%= csrf_meta_tags %>
-  </head>
+  <!DOCTYPE html>
+  <html lang="en">
+      <head>
+          <meta charset="utf-8">
+          <meta name="apple-mobile-web-app-capable" content="yes" />
+          <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+          <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+          <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+          <link rel="shortcut icon" href="startup/flat-ui/images/favicon.ico">
+          
+          <link rel="stylesheet" href="startup/flat-ui/bootstrap/css/bootstrap.css">
+          <link rel="stylesheet" href="startup/flat-ui/css/flat-ui.css">
+          <!-- Using only with Flat-UI (free)-->
+          <link rel="stylesheet" href="startup/common-files/css/icon-font.css">
+          <!-- end -->
+          <link rel="stylesheet" href="startup/common-files/css/animations.css">
+          <link rel="stylesheet" href="static/css/style.css">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <title><%= content_for?(:title) ? yield(:title) : "Ujirani App" %></title>
+          <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Ujirani App" %>">
+          <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => false %>
+          <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
+          <%= csrf_meta_tags %>
+          </head>
+
   <body>
     <%= render 'layouts/navigation' %>
     <%= yield %>
