--- a/app/assets/stylesheets/blog/uno.css@v=d15351b62b.css
+++ b/app/assets/stylesheets/blog/uno.css@v=d15351b62b.css
@@ -2078,3 +2078,10 @@ input[type="tel"] {
   font-size: 36px;
   color: #cc6eb7
 }
+
+@media only screen and (min-width : 320px) and (max-width : 480px) {/*--- Mobile portrait ---*/}
+@media only screen and (min-width : 480px) and (max-width : 595px) {/*--- Mobile landscape ---*/}
+@media only screen and (min-width : 595px) and (max-width : 690px) {/*--- Small tablet portrait ---*/}
+@media only screen and (min-width : 690px) and (max-width : 800px) {/*--- Tablet portrait ---*/}
+@media only screen and (min-width : 800px) and (max-width : 1024px) {/*--- Small tablet landscape ---*/}
+@media only screen and (min-width : 1024px) and (max-width : 1224px) {/*--- Tablet landscape --- */}
